--- a/src/Section06/package.json
+++ b/src/Section06/package.json
@@ -15,6 +15,7 @@
     "expo": "^40.0.0",
     "expo-cli": "^4.0.16",
     "expo-constants": "~9.3.3",
+    "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "^7.9.0",
     "firebase-tools": "^9.0.1",
