--- a/src/Section07/package.json
+++ b/src/Section07/package.json
@@ -18,8 +18,10 @@
     "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "^7.9.0",
-    "firebase-tools": "^9.0.1",
+    "firebase-tools": "^9.1.0",
     "moment": "^2.29.1",
+    "n": "^7.0.0",
+    "nodenv": "^0.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
