--- a/src/functions/shop-review-firebase/functions/package.json
+++ b/src/functions/shop-review-firebase/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "firebase": "^8.2.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.13.0",
     "firebase-tools": "^9.1.0"
