--- a/src/functions/shop-review-firebase/functions/package.json
+++ b/src/functions/shop-review-firebase/functions/package.json
@@ -13,14 +13,15 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "algoliasearch": "^4.8.3",
     "firebase": "^8.2.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.13.0",
     "firebase-tools": "^9.1.0"
   },
   "devDependencies": {
-    "typescript": "^3.8.0",
-    "firebase-functions-test": "^0.2.0"
+    "firebase-functions-test": "^0.2.0",
+    "typescript": "^3.8.0"
   },
   "private": true
 }
